--- a/comentarios-filmes-series.html
+++ b/comentarios-filmes-series.html
@@ -18,6 +18,7 @@
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.0.0/dist/js/bootstrap.min.js"
         integrity="sha384-JZR6Spejh4U02d8jOt6vLEHfe/JQGiRRSQQxSfFWpi1MquVdAyjUar5+76PVCmYl"
         crossorigin="anonymous"></script>
+    <script src="./js/script.js" defer></script>
     <title>Comentários Filmes&Séries</title>
     <link rel="stylesheet" href="style.css">
 </head>
@@ -47,45 +48,54 @@
         </form>
     </div>
     <section>
-    <div class="content">
-        <div class="item">
-            <div class="comment">
-                <img src=".\img\chaplin.jpg" alt="Chaplin" class="imagem"><br>
-                "Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et
-                dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip
-                ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu
-                fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia
-                deserunt mollit anim id est laborum."<br>
-                7.9
+        <div class="content">
+            <div class="item">
+                <div class="comment">
+                    <img src=".\img\chaplin.jpg" alt="Chaplin" class="imagem"><br>
+                    "Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore
+                    et
+                    dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut
+                    aliquip
+                    ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum
+                    dolore eu
+                    fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia
+                    deserunt mollit anim id est laborum."<br>
+                    7.9
+                </div>
+            </div>
+            <div class="item">
+                <div class="comment">
+                    <img src=".\img\goonies.jpg" alt="Goonies" class="imagem"><br>
+                    "Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore
+                    et
+                    dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut
+                    aliquip
+                    ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum
+                    dolore eu
+                    fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia
+                    deserunt mollit anim id est laborum."<br>
+                    8.7
+                </div>
+            </div>
+            <div class="item">
+                <div class="comment">
+                    <img src=".\img\killbill.jpg" alt="Kill Bill" class="imagem"><br>
+                    "Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore
+                    et
+                    dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut
+                    aliquip
+                    ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum
+                    dolore eu
+                    fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia
+                    deserunt mollit anim id est laborum."<br>
+                    9.5
+                </div>
             </div>
         </div>
-        <div class="item">
-            <div class="comment">
-                <img src=".\img\goonies.jpg" alt="Goonies" class="imagem"><br>
-                "Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et
-                dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip
-                ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu
-                fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia
-                deserunt mollit anim id est laborum."<br>
-                8.7
-            </div>
-        </div>
-        <div class="item">
-            <div class="comment">
-                <img src=".\img\killbill.jpg" alt="Kill Bill" class="imagem"><br>
-                "Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et
-                dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip
-                ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu
-                fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia
-                deserunt mollit anim id est laborum."<br>
-                9.5
-            </div>
-        </div>
-    </div>
-</section>
+    </section>
     <div class="comment-form">
         <h1>Deixe seu Comentário e Avaliação</h1>
-        <form action="processar_comentario.php" method="post">
+        <form>
             <label for="nome">Nome:</label>
             <input type="text" id="nome" name="nome" placeholder="Nome" required>
 
@@ -93,19 +103,19 @@
             <textarea id="comentario" name="comentario" rows="4" placeholder="Insira seu comentário aqui"
                 required></textarea>
 
-            <button type="submit">Enviar</button>
-
-
             <label for="nota">Avaliação por Nota:</label>
-            <select id="nota" name="nota">
-                <option value="5">5 - Excelente</option>
-                <option value="4">4 - Muito Bom</option>
-                <option value="3">3 - Bom</option>
-                <option value="2">2 - Regular</option>
-                <option value="1">1 - Ruim</option>
+            <select id="nota" name="nota" class="star-rating">
+                <option value="5">&#9733; &#9733; &#9733; &#9733; &#9733; - Excelente</option>
+                <option value="4">&#9733; &#9733; &#9733; &#9733; &#9734; - Muito Bom</option>
+                <option value="3">&#9733; &#9733; &#9733; &#9734; &#9734; - Bom</option>
+                <option value="2">&#9733; &#9733; &#9734; &#9734; &#9734; - Regular</option>
+                <option value="1">&#9733; &#9734; &#9734; &#9734; &#9734; - Ruim</option>
             </select>
-            <button type="submit">Enviar Comentário</button>
+
+            <button type="button" onclick="adicionarComentario()">Enviar Comentário</button>
         </form>
+        <ul id="comentarios"></ul>
+    </div>
     </div>
     <script src="./Menu/menuScript.js"></script>
 
